force-app/main/default/objects/Case/fields/Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Number__c</fullName>
    <label>Bank Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>