force-app/main/default/objects/Case/fields/Degree__c.field-meta.xml
<CustomField>
    <fullName>Degree__c</fullName>
    <label>Degree</label>
    <length>255</length>
    <type>Text</type>
</CustomField>