force-app/main/default/objects/Case/fields/Family_Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Family_Member_Name__c</fullName>
    <label>Family Member Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>