force-app/main/default/objects/Case/fields/Graduation_Date__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Date__c</fullName>
    <label>Graduation Date</label>
    <type>Date</type>
</CustomField>