force-app/main/default/objects/Case/fields/Is_it_Dependant_Contact__c.field-meta.xml
<CustomField>
    <fullName>Is_it_Dependant_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is it Dependant Contact?</label>
    <type>Checkbox</type>
</CustomField>