force-app/main/default/objects/Case/fields/Leave_Duration__c.field-meta.xml
<CustomField>
    <fullName>Leave_Duration__c</fullName>
    <label>Leave Duration</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>