force-app/main/default/objects/Case/fields/Level_of_Education__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Education__c</fullName>
    <label>Level of Education</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Post Graduate</fullName>
            </value>
            <value>
                <fullName>Graduate</fullName>
            </value>
            <value>
                <fullName>Std X/SSC</fullName>
            </value>
            <value>
                <fullName>Std XII/HSC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>