force-app/main/default/objects/Case/fields/logineduserContact__c.field-meta.xml
<CustomField>
    <fullName>logineduserContact__c</fullName>
    <formula>$User.ContactId =  Case_Assignee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>logineduserContact</label>
    <type>Checkbox</type>
</CustomField>