force-app/main/default/objects/Case/fields/Reason_for_Early_Relieving_Date__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Early_Relieving_Date__c</fullName>
    <label>Reason for Early Relieving Date</label>
    <length>220</length>
    <type>Text</type>
</CustomField>