force-app/main/default/objects/Case/fields/Request_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Sub_Type__c</fullName>
    <label>Request Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Educational Details</fullName>
            </value>
            <value>
                <fullName>Bank Details</fullName>
            </value>
            <value>
                <fullName>Family/Dependent Information</fullName>
            </value>
            <value>
                <fullName>Offboarding</fullName>
            </value>
            <value>
                <fullName>Leave Request</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Problem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>