force-app/main/default/objects/Case/validationRules/Last_Working_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Last_Working_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Last_Working_Date__c &lt; TODAY()</errorConditionFormula>
    <errorMessage>Last working date should be In Before Existing Last working date</errorMessage>
</ValidationRule>