force-app/main/default/objects/Case/validationRules/Status_is_approved_or_rejected.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_is_approved_or_rejected</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
   TEXT(PRIORVALUE(Status)) = &apos;Closed&apos;,
   TEXT(PRIORVALUE(Status)) = &apos;Resignation Approved&apos;,
			TEXT(PRIORVALUE(Status)) = &apos;Resignation Rejected&apos;
)</errorConditionFormula>
    <errorMessage>Closed or Approved Requests not updated</errorMessage>
</ValidationRule>