force-app/main/default/objects/Case/listViews/All_Service_Requests.listView-meta.xml
<ListView>
    <fullName>All_Service_Requests</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CLOSED</columns>
    <filterScope>Everything</filterScope>
    <label>All Service Requests</label>
</ListView>