force-app/main/default/objects/Case/listViews/Grid_Support_Case.listView-meta.xml
<ListView>
    <fullName>Grid_Support_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Grid Support</label>
    <queue>Grid_Support</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>