force-app/main/default/objects/Case/listViews/HR_Executive_Queue_Case.listView-meta.xml
<ListView>
    <fullName>HR_Executive_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>HR Executive Queue</label>
    <queue>HR_Executive_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>