force-app/main/default/objects/Case/listViews/Pending_on_Me_Service_Request.listView-meta.xml
<ListView>
    <fullName>Pending_on_Me_Service_Request</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>logineduserContact__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,In Progress,Waiting for Resource To Respond</value>
    </filters>
    <label>Pending on Me Service Request</label>
</ListView>